# Phytellagent

./: .gitignore  README.md  README.txt  chat_payload.json  data.txt  local_history.json  mcp_settings.json  pyproject.toml  requirements.txt  start_debug.bat  test_mcp_call.py  test_stdio_call.py  thickness_data.txt  tmp_test_inner.py  tmp_test_parse2.py  调试日志.txt
Client_Server/: .env  .env.example  api.py  backend_main.py  film_thickness_data.txt  instructions.txt  local_history.json  main.py  mcp_settings.json  package-lock.json  package.json  rag_system.py  requirements.txt  run_curl_call.bat  start_backend.bat  start_backend.ps1  test.py  tmp_list_child_tools2.py  tmp_reload_backend.py  调试日志.txt
Client_Server/backend/: README.md  backend_main.py  client.py  pyproject.toml  tool_specs.py
Client_Server/faiss_store/: metadata.pkl
Client_Server/mcp_service/: service.py
Client_Server/mcp_service/tools/: __init__.py  bilibili_tool.py  data_memory.py  differential_equations_tool.py  draw_function_tool.py  file_convert_tool.py  fourier_tool.py  mysql_tool.py  (+7 more)
Client_Server/scripts/: check_bili.py
Client_Server/source_documents/: 2.txt  _kb_manifest.json  泡利.docx
Client_Server/temp_uploads/: 2c4006cb-a3e5-4947-9d27-72209e4bd469__3c434251-84ce-41b8-9102-1f80eea76a17__测试.docx  3bff066e-f7d3-44ab-bc13-1c89209a8db8__测试2.docx  4a4b94df-85ad-4a6b-9272-75b7e596e298__Transformer&MCP.docx  70180c4a-c6b3-4f2f-b0d9-ac31fc725ea3__smoke_upload.txt
Client_Server/tests/: smoke_api.py
Client_Server_Backend/: README.md  data.txt  film_thickness_data.txt  instructions.txt  pyproject.toml  tmp_test_center.py  tmp_test_final.py  tmp_test_full_symdict.py  tmp_test_parse.py  tmp_test_simple.py
Client_Server_Backend/client/: client.py  test_list_tools.py
Client_Server_Backend/service/tools/: __init__.py  pandas_tool.py  system_info_tool.py
client/: client.py  test.py
data/knowledge_graph/: 计算物理知识图谱1.xlsx
docs/: instructions.txt
scripts/dev/: start_debug.bat  start_debug.sh
service/: service.py
service/tools/: __init__.py  bilibili_tool.py  least_square_tool.py  matplotlib_tool.py  mysql_tool.py  system_info_tool2.py
src/: main.py
src/knowledge_graph/: __init__.py  tool.py
src/mcp_service/: service.py
src/models/: models.py
src/tools/: __init__.py  matplotlib_tool.py  mysql_tool.py
(+42 files in other folders)
