[project]
name = "service"
version = "0.1.0"
description = "Reference pyproject from Client_Server_Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "bilibili-api>=4.1.0",
    "bilibili-api-python>=17.4.0",
    "deepseek>=1.0.0",
    "fastapi>=0.122.0",
    "fastmcp>=2.14.3",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.22.0",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.6.0",
    "mysql-mcp-server>=0.2.2",
    "nicegui>=3.7.1",
    "numpy>=2.4.1",
    "openai>=2.21.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "psutil>=7.2.0",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "scipy>=1.17.0",
    "sentence-transformers>=5.2.2",
    "sympy>=1.14.0",
    "tokenizers>=0.22.2",
    "transformers>=5.1.0",
    "uvicorn[standard]>=0.38.0",
]
